--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@nuxt/eslint": "1.4.1",
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "3.1.2",
+    "@tailwindcss/vite": "^4.1.10",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
+    "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
