--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "3.1.2",
     "@tailwindcss/vite": "^4.1.10",
+    "@vueuse/core": "^13.3.0",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
     "tailwindcss": "^4.1.10",
