--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
+    "nuxt-posthog": "^1.6.3",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "vue": "^3.5.14",
