--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@nuxt/eslint": "1.4.1",
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "3.1.2",
+    "@pinia/nuxt": "^0.11.1",
     "@tailwindcss/vite": "^4.1.10",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
+    "pinia": "^3.0.3",
     "tailwindcss": "^4.1.10",
     "typescript": "^5.8.3",
     "vue": "^3.5.14",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.67"
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977"
 }
