--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/eslint": "1.4.1",
     "@nuxt/image": "1.10.0",
     "@nuxt/ui": "3.1.2",
+    "@nuxtjs/i18n": "^9.5.6",
     "@pinia/nuxt": "^0.11.1",
     "@tailwindcss/vite": "^4.1.10",
     "eslint": "^9.27.0",
