--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
   },
   "packageManager": "pnpm@10.11.0+sha512.6540583f41cc5f628eb3d9773ecee802f4f9ef9923cc45b69890fb47991d4b092964694ec3a4f738a420c918a333062c8b925d312f42e4f0c263eb603551f977",
   "devDependencies": {
+    "@iconify-json/ic": "^1.2.2",
+    "@iconify-json/lucide": "^1.2.57",
+    "@iconify-json/material-symbols": "^1.2.30",
+    "@iconify-json/mynaui": "^1.2.14",
+    "@iconify-json/tabler": "^1.2.19",
     "pnpm": "^10.12.4"
   }
 }
