--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@nuxt/ui": "3.1.2",
     "@pinia/nuxt": "^0.11.1",
     "@tailwindcss/vite": "^4.1.10",
+    "@vueuse/core": "^13.6.0",
+    "@vueuse/nuxt": "^13.6.0",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
     "pinia": "^3.0.3",
