--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "@vueuse/core": "^13.6.0",
     "@vueuse/nuxt": "^13.6.0",
+    "dayjs": "^1.11.18",
     "eslint": "^9.27.0",
     "nuxt": "^3.17.4",
     "pinia": "^3.0.3",
