--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -5,3 +5,10 @@ onlyBuiltDependencies:
   - sharp
   - unrs-resolver
   - vue-demi
+overrides:
+  '@eslint/plugin-kit@<0.3.4': '>=0.3.4'
+  ipx@>=2.0.0-0 <2.1.1: '>=2.1.1'
+  tmp@<=0.2.3: '>=0.2.4'
+  devalue@<5.3.2: '>=5.3.2'
+  vite@>=6.0.0 <=6.3.5: '>=6.3.6'
+  nuxt@>=3.6.0 <3.19.0: '>=3.19.0'
