--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@iconify-json/ic": "^1.2.2",
     "@iconify-json/lucide": "^1.2.57",
     "@iconify-json/material-symbols": "^1.2.30",
+    "@iconify-json/mdi": "^1.2.3",
     "@iconify-json/mynaui": "^1.2.14",
     "@iconify-json/tabler": "^1.2.19",
     "pnpm": "^10.12.4"
